few ui improvements

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started Extension's Popup</title>
+    <title>Cinemaplex</title>
     <link href="jquery-mobile.css" rel="stylesheet" type="text/css">
     <style>
       body{
@@ -21,6 +21,15 @@
 
       iframe {
           border: none;
+      }
+      #backdrop-img{
+          width: 100%;
+          height: 100%;
+      }
+      #poster-img{
+          position: absolute;
+          top: 120px;
+          left: 25px;
       }
     </style>
 
@@ -43,8 +52,10 @@
       </div><!-- /header -->
 
       <div role="main" class="ui-content">
-        <h3>Today in Cinemas</h3>
-      <ul data-role="listview" data-inset="true" id="movies">
+        <form class="ui-filterable">
+            <input id="movies-showing-input" data-type="search" placeholder="Search Movies">
+        </form>
+      <ul data-role="listview" data-inset="true" id="movies"  data-filter="true" data-input="#movies-showing-input">
       </ul>
       </div><!-- /content -->
 
@@ -57,7 +68,7 @@
 <div data-role="page" id="page2" data-theme="b" class="pages">
 
   <div data-role="header" data-position="fixed">
-    <a href="#page1" data-direction="reverse"  data-icon="arrow-l" data-theme="b">Back</a>
+    <a href="#page1" data-direction="reverse"  data-icon="arrow-l" data-theme="b" id="page1">Back</a>
     <h1>Movie</h1>
     <a data-icon="video" data-theme="b" href="#popupVideo" data-rel="popup" data-position-to="window">Trailer</a>
   </div><!-- /header -->
@@ -65,18 +76,23 @@
   <div role="main" class="ui-content">
   <div class="ui-grid-solo">
       <div class="ui-block-a" style="text-align: center;">
-        <img src="" id="movie-backdrop">
+        <div id="backdrop-img">
+          <img src="" id="movie-backdrop">
+        </div>
+        <div id="poster-img">
+           <img src="http://image.tmdb.org/t/p/w92/d4kPMHsoTEH3FIkBDJM0uVOlas6.jpg" id="movie-poster">
+        </div>
       </div>
   </div>
     <h2 id="movie-title"></h2>
-    <p id="movie-description"></p>
+     <p id="movie-description"></p>
+         <h3>Cinemas</h3>
+      <ul data-role="listview" data-inset="true" id="cinemas">
+    </ul>
+   
 <div data-role="popup" id="popupVideo" data-overlay-theme="b" data-theme="a" data-tolerance="15,15" class="ui-content">
   <iframe width="497" height="298"  src="" frameborder="0" allowfullscreen></iframe>
 </div>
-    <h3>Cinemas</h3>
-    <ul data-role="listview" data-inset="true" id="cinemas">
-    </ul>
-    <p><a href="#page1" data-direction="reverse"  data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-btn-b">Back</a></p>
 
   </div><!-- /content -->
   <div data-role="footer">
